--- a/Pertemuan1/jadwal_205314020.html
+++ b/Pertemuan1/jadwal_205314020.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Jadwal Kuliah - 205314020</title>
-        <link rel="stylesheet" href="cssJadwal.css">
+        <link rel="stylesheet" href="https://coba-replay.000webhostapp.com/cssPlatform/cssJadwal.css">
     </head>
     <body>
         <div class="container">
@@ -17,23 +17,95 @@
                     <thead>
                         <tr>
                             <th>Hari/Jam</th>
-                            <th>Jam 07.00 - jam 08.00</th>
-                            <th>Jam 08.00 - jam 09.00</th>
-                            <th>Jam 09.00 - jam 10.00</th>
-                            <th>Jam 10.00 - jam 11.00</th>
-                            <th>Jam 11.00 - jam 12.00</th>
-                            <th>Jam 12.00 - jam 13.00</th>
-                            <th>Jam 13.00 - jam 14.00</th>
-                            <th>Jam 14.00 - jam 15.00</th>
-                            <th>Jam 15.00 - jam 16.00</th>
+                            <th>Jam 07.00 <br> s/d <br> jam 08.00</th>
+                            <th>Jam 08.00 <br> s/d <br> jam 09.00</th>
+                            <th>Jam 09.00 <br> s/d <br> jam 10.00</th>
+                            <th>Jam 10.00 <br> s/d <br> jam 11.00</th>
+                            <th>Jam 11.00 <br> s/d <br> jam 12.00</th>
+                            <th>Jam 12.00 <br> s/d <br> jam 13.00</th>
+                            <th>Jam 13.00 <br> s/d <br> jam 14.00</th>
+                            <th>Jam 14.00 <br> s/d <br> jam 15.00</th>
+                            <th>Jam 15.00 <br> s/d <br> jam 16.00</th>
+                            <th>Jam 16.00 <br> s/d <br> jam 17.00</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
+                            <td class="hari">Senin</td>
+                            <td>Strategi Algo</td>
+                            <td>Strategi Algo</td>
+                            <td>Strategi Algo</td>
+                            <td>RPL</td>
+                            <td>RPL</td>
+                            <td>RPL</td>
                             <td></td>
+                            <td>Platform</td>
+                            <td>Platform</td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="hari">Selasa</td>
+                            <td>Pengenalan Pola</td>
+                            <td>Pengenalan Pola</td>
+                            <td>Pengenalan Pola</td>
+                            <td>Perolehan Informasi</td>
+                            <td>Perolehan Informasi</td>
+                            <td>Perolehan Informasi</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="hari">Rabu</td>
+                            <td>Pemrosesan Citra</td>
+                            <td>Pemrosesan Citra</td>
+                            <td>Pemrosesan Citra</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>RPL</td>
+                            <td>RPL</td>
+                            <td>RPL</td>
+                            <td></td>   
+                        </tr>
+                        <tr>
+                            <td class="hari">Kamis</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Platform</td>
+                            <td>Platform</td>
+                            <td>Platform</td>
+                            <td></td>
+                            <td>Pengenalan Pola</td>
+                            <td>Pengenalan Pola</td>
+                            <td>Pengenalan Pola</td>
+                        </tr>
+                        <tr>
+                            <td class="hari">Jumat</td>
+                            <td>Pemrosesan Citra</td>
+                            <td>Pemrosesan Citra</td>
+                            <td>Pemrosesan Citra</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Perolehan Informasi</td>
+                            <td>Perolehan Informasi</td>
+                            <td>Perolehan Informasi</td>
                         </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="quotes">
+                <marquee class="pertama" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
+                    ORA CUCUL ORA NGEBUL >><< SEGALA SESUATU BUTUH MODAL
+                </marquee>
+
+                <marquee class="kedua" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
+                    SIJI DI SYUKURI AKEH DI TRANSFERI
+                </marquee>
             </div>
         </div>
     </body>
