--- a/Pertemuan1/jadwal_205314020.html
+++ b/Pertemuan1/jadwal_205314020.html
@@ -1,112 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Jadwal Kuliah - 205314020</title>
-        <link rel="stylesheet" href="https://coba-replay.000webhostapp.com/cssPlatform/cssJadwal.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="judul">
-                <h1>Jadwal Kuliah - 205314020</h1>
-            </div>
-            <div class="table">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Hari/Jam</th>
-                            <th>Jam 07.00 <br> s/d <br> jam 08.00</th>
-                            <th>Jam 08.00 <br> s/d <br> jam 09.00</th>
-                            <th>Jam 09.00 <br> s/d <br> jam 10.00</th>
-                            <th>Jam 10.00 <br> s/d <br> jam 11.00</th>
-                            <th>Jam 11.00 <br> s/d <br> jam 12.00</th>
-                            <th>Jam 12.00 <br> s/d <br> jam 13.00</th>
-                            <th>Jam 13.00 <br> s/d <br> jam 14.00</th>
-                            <th>Jam 14.00 <br> s/d <br> jam 15.00</th>
-                            <th>Jam 15.00 <br> s/d <br> jam 16.00</th>
-                            <th>Jam 16.00 <br> s/d <br> jam 17.00</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="hari">Senin</td>
-                            <td>Strategi Algo</td>
-                            <td>Strategi Algo</td>
-                            <td>Strategi Algo</td>
-                            <td>RPL</td>
-                            <td>RPL</td>
-                            <td>RPL</td>
-                            <td></td>
-                            <td>Platform</td>
-                            <td>Platform</td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="hari">Selasa</td>
-                            <td>Pengenalan Pola</td>
-                            <td>Pengenalan Pola</td>
-                            <td>Pengenalan Pola</td>
-                            <td>Perolehan Informasi</td>
-                            <td>Perolehan Informasi</td>
-                            <td>Perolehan Informasi</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="hari">Rabu</td>
-                            <td>Pemrosesan Citra</td>
-                            <td>Pemrosesan Citra</td>
-                            <td>Pemrosesan Citra</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>RPL</td>
-                            <td>RPL</td>
-                            <td>RPL</td>
-                            <td></td>   
-                        </tr>
-                        <tr>
-                            <td class="hari">Kamis</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>Platform</td>
-                            <td>Platform</td>
-                            <td>Platform</td>
-                            <td></td>
-                            <td>Pengenalan Pola</td>
-                            <td>Pengenalan Pola</td>
-                            <td>Pengenalan Pola</td>
-                        </tr>
-                        <tr>
-                            <td class="hari">Jumat</td>
-                            <td>Pemrosesan Citra</td>
-                            <td>Pemrosesan Citra</td>
-                            <td>Pemrosesan Citra</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>Perolehan Informasi</td>
-                            <td>Perolehan Informasi</td>
-                            <td>Perolehan Informasi</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="quotes">
-                <marquee class="pertama" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
-                    ORA CUCUL ORA NGEBUL >><< SEGALA SESUATU BUTUH MODAL
-                </marquee>
 
-                <marquee class="kedua" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA" onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
-                    SIJI DI SYUKURI AKEH DI TRANSFERI
-                </marquee>
-            </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jadwal Kuliah - 205314020</title>
+    <!-- <link rel="stylesheet" href="https://coba-replay.000webhostapp.com/cssPlatform/cssJadwal.css"> -->
+    <link rel="stylesheet" href="cssJadwal.css">
+</head>
+
+<body>
+    <div class="container">
+        <table width="100%">
+            <tr>
+                <td>
+                    <h1>Jadwal Kuliah - 205314020</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img class="logo" src="usd.jpg" alt="logo-usd">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h1>Fransiskus Xaverius Bima Yudha Pratama</h1>
+                    <h1>205314020</h1>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h2>Nama Nama Mata Kuliah</h1>
+                    <ul class="list-matkul">
+                        <li>Analisis dan Strategi Algoritma A / ASA (INF I/2022/2023)</li>
+                        <li>Pemerolehan Informasi B / PI (INF I/2022/2023)</li>
+                        <li>Pemrograman Berbasis Platform C / PLATFORM (INF I/2022/2023)</li>
+                        <li>Pemrosesan Citra A / CITRA (INF I/2022/2023)</li>
+                        <li>Pengenalan Pola E / POLA (INF I/2022/2023)</li>
+                        <li>Rekayasa Perangkat Lunak C / RPL (INF I/2022/2023)</li>
+                    </ul>
+                </td>
+            </tr>
+            </tr>
+        </table>
+        <div class="table">
+            <table border="10" width="100%">
+                <thead>
+                    <tr>
+                        <th>Hari/Jam</th>
+                        <th>07.00 <br> s/d <br> 08.00</th>
+                        <th>08.00 <br> s/d <br> 09.00</th>
+                        <th>09.00 <br> s/d <br> 10.00</th>
+                        <th>10.00 <br> s/d <br> 11.00</th>
+                        <th>11.00 <br> s/d <br> 12.00</th>
+                        <th>12.00 <br> s/d <br> 13.00</th>
+                        <th>13.00 <br> s/d <br> 14.00</th>
+                        <th>14.00 <br> s/d <br> 15.00</th>
+                        <th>15.00 <br> s/d <br> 16.00</th>
+                        <th>16.00 <br> s/d <br> 17.00</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Senin</td>
+                        <td>ASA</td>
+                        <td>ASA</td>
+                        <td>ASA</td>
+                        <td>RPL</td>
+                        <td>RPL</td>
+                        <td>RPL</td>
+                        <td></td>
+                        <td>PLATFORM</td>
+                        <td>PLATFORM</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Selasa</td>
+                        <td>POLA</td>
+                        <td>POLA</td>
+                        <td>POLA</td>
+                        <td>PI</td>
+                        <td>PI</td>
+                        <td>PI</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Rabu</td>
+                        <td>CITRA</td>
+                        <td>CITRA</td>
+                        <td>CITRA</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>RPL</td>
+                        <td>RPL</td>
+                        <td>RPL</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Kamis</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>PLATFORM</td>
+                        <td>PLATFORM</td>
+                        <td>PLATFORM</td>
+                        <td></td>
+                        <td>POLA</td>
+                        <td>POLA</td>
+                        <td>POLA</td>
+                    </tr>
+                    <tr>
+                        <td>Jumat</td>
+                        <td>CITRA</td>
+                        <td>CITRA</td>
+                        <td>CITRA</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>PI</td>
+                        <td>PI</td>
+                        <td>PI</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </body>
+        <div class="quotes">
+            <marquee class="pertama" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA"
+                onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
+                ORA CUCUL ORA NGEBUL >><< SEGALA SESUATU BUTUH MODAL </marquee>
+
+                    <marquee class="kedua" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA"
+                        onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
+                        SIJI DI SYUKURI AKEH DI TRANSFERI
+                    </marquee>
+        </div>
+    </div>
+</body>
+
 </html>
