--- a/Pertemuan1/jadwal_205314020.html
+++ b/Pertemuan1/jadwal_205314020.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Kuliah - 205314020</title>
-    <!-- <link rel="stylesheet" href="https://coba-replay.000webhostapp.com/cssPlatform/cssJadwal.css"> -->
     <link rel="stylesheet" href="cssJadwal.css">
 </head>
 
@@ -133,12 +132,12 @@
         <div class="quotes">
             <marquee class="pertama" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA"
                 onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
-                ORA CUCUL ORA NGEBUL >><< SEGALA SESUATU BUTUH MODAL </marquee>
-
-                    <marquee class="kedua" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA"
-                        onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
-                        SIJI DI SYUKURI AKEH DI TRANSFERI
-                    </marquee>
+                ORA CUCUL ORA NGEBUL >><< SEGALA SESUATU BUTUH MODAL 
+            </marquee>
+            <marquee class="kedua" behavior="alternate" scrolldelay="100" title="BISA TERBACA PESANNYA"
+                onmouseover="this.stop()" onmouseout="this.start()" scrollamount="4">
+                SIJI DI SYUKURI AKEH DI TRANSFERI
+            </marquee>
         </div>
     </div>
 </body>
