--- a/Pertemuan4/javascript.html
+++ b/Pertemuan4/javascript.html
@@ -62,20 +62,73 @@
         //     alert('Terima kasih sayang');
         // }
 
-        var jmlhAngkot =10;
-        var angkotBeroperasi = 6;
-        var noAngkot = 1;
+        // var jmlhAngkot =10;
+        // var angkotBeroperasi = 6;
+        // var noAngkot = 1;
 
-        while (noAngkot <= angkotBeroperasi) {
-            console.log('amgkot no. ' + noAngkot + ' beroperasi dengan baik.');
-            noAngkot++;
-        }
+        // while (noAngkot <= angkotBeroperasi) {
+        //     console.log('amgkot no. ' + noAngkot + ' beroperasi dengan baik.');
+        //     noAngkot++;
+        // }
 
-        for (noAngkot = 7; noAngkot <= jmlhAngkot; noAngkot++) {
-            console.log('Angkot no. ' + noAngkot + ' sedang tidak beroperasi.');
+        // for (noAngkot = 7; noAngkot <= jmlhAngkot; noAngkot++) {
+        //     console.log('Angkot no. ' + noAngkot + ' sedang tidak beroperasi.');
             
-        }
+        // }
 
+        // var jmlhAngkot =10;
+        // var angkotBeroperasi = 6;
+        // for (var noAngkot = 1; noAngkot <= jmlhAngkot; noAngkot++) {
+        //     if (noAngkot <= 6 && noAngkot !== 5) {
+        //         console.log('angkot no. ' + noAngkot + ' beroperasi dengan baik.');
+        //     }else if(noAngkot == 8  || noAngkot === 10 || noAngkot === 5){
+        //         console.log('angkot no. ' + noAngkot + ' sedang libur');
+        //     }else{
+        //         console.log('angkot no. ' + noAngkot + ' sedang tidak beroperasi.');
+        //     }
+        // }
+
+        // var angka = prompt('masukkan angka : ');
+        
+        // switch (angka) {
+        //     case 1:
+        //         alert('anda memasukkan angka 1');
+        //         break;
+        //     case 2:
+        //         alert('anda memasukkan angka 2');
+        //         break;
+        //     case 3:
+        //         alert('anda memasukkan angka 3');
+        //         break;
+        //     default:
+        //         alert('angka yang anda masukkan salah');
+        //         break;
+        // }
+
+        // var s = '';
+        // for (var i = 0; i < 10; i++) {
+        //     s += "*****";
+        //     s += '\n';
+        // }
+        // console.log(s);
+
+        // var s = '';
+        // for (var i = 0; i < 15; i++) {
+        //     for (var j = 0; j < i; j++) {
+        //         s += '*';
+        //     }
+        //     s += '\n';
+        // }
+        // console.log(s);
+
+        var s = '';
+        for (var i = 10; i > 0; i--) {
+            for (var j = 0; j < i; j++) {
+                s += '*';
+            }
+            s += '\n';
+        }
+        console.log(s);
     </script>
 </body>
 </html>
