update tugas DOM

--- a/Pertemuan4/membalik_huruf.html
+++ b/Pertemuan4/membalik_huruf.html
@@ -11,7 +11,7 @@
         var lagi = true;
         while(lagi){
             kata = prompt('Masukkan Kata :');
-            hasil = baru(kata);
+            hasil = membalik(kata);
 
             console.log('Hasilnya adalah : ' + hasil);
             lagi = confirm('Mau Lagi?');
